add statsactivity ui content, works but the api call is not implemented yet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,16 @@
             android:theme="@style/Theme.Spotistics">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".StatsActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Spotistics">
+            <intent-filter>
+                <action android:name="android.intent.action.STAT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
