--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    package="com.example.spotistics"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
@@ -13,6 +15,7 @@
         android:theme="@style/Theme.Spotistics"
         tools:targetApi="31">
         <activity
+            android:launchMode="singleInstance"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
@@ -21,6 +24,16 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.VIEW"/>-->
+
+<!--                <category android:name="android.intent.category.DEFAULT"/>-->
+<!--                <category android:name="android.intent.category.BROWSABLE"/>-->
+<!--                <data-->
+<!--                    android:host="auth"-->
+<!--                    android:scheme="spotistics"/>-->
+<!--            </intent-filter>-->
         </activity>
     </application>
 </manifest>
